# FYP-Implementation

./: .gitignore  README.md  ThreatLog.sol  ThreatLog_abi.json  astra.txt  demo.py  deploy_contract.py  experiment_model_training.ipynb  experiments.ipynb  main.py  pyproject.toml  requirements.txt  startup.py  template_1.py  test_blockchain.py
app/: __init__.py  blockchain.py  main.py  models.py  schemas.py
app/routers/: batch.py  blockchain_router.py  health.py  predict.py
artifacts/: label_encoder.pkl  scaler.pkl  xgb_multiclass.pkl
notebooks/: cnn_ids_2017.ipynb
src/data/: ingestion.py  preprocessing.py
src/exception/: __init__.py
src/features/: feature_engineering.py  feature_selection.py
src/logger/: __init__.py
ui/: astra_dashboard_1.html
