[project]
name = "fyp-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "from-root>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "tensorflow>=2.21.0",
    "uvicorn[standard]>=0.29.0",
]
